# todo-actix-seaorm

./: .env  Cargo.toml  README.md
migrations/: 20220108202841_initial.sql
src/: main.rs
src/entity/: prelude.rs  todos.rs
src/handler/: todos.rs
src/repository/: mod.rs  prelude.rs  todos.rs
