[package]
name = "todo-actix-seaorm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-actix-rustls", "macros", "debug-print" ], default-features = false }
dotenv = "0.15.0"
chrono = "0.4"
serde = "1"
actix-web = "4.0.0-beta.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
